--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,27 +13,30 @@
         tools:ignore="ExtraText"
         tools:targetApi="31">
         <activity
+            android:name=".HistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.Travelmanagermobile.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.Travelmanagermobile.NoActionBar"></activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="true"
             android:theme="@style/Theme.Travelmanagermobile.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Travelmanagermobile.NoActionBar" />
+            android:theme="@style/Theme.Travelmanagermobile.NoActionBar"></activity>
     </application>
 
 </manifest>
