--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".HistoryActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Travelmanagermobile.NoActionBar"/>
         <activity
             android:name=".EditProfileActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.Travelmanagermobile.NoActionBar"/>
         <activity
             android:name=".LoginActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Travelmanagermobile.NoActionBar"></activity>
-        <activity
-            android:name=".RegisterActivity"
             android:exported="true"
             android:theme="@style/Theme.Travelmanagermobile.NoActionBar">
             <intent-filter>
@@ -33,10 +31,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".RegisterActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Travelmanagermobile.NoActionBar">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Travelmanagermobile.NoActionBar"></activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
